# BadSuccessor

./: BadSuccessor.py  README.md  __init__.py  pyproject.toml
BadSuccessor/: BadSuccessor.py
LICENSE/: BadSuccessor_License.txt  Rubeus_License.txt
