[project]
name = "BadSuccessor"
version = "1.0.0"
description = "Delegated MSA Utility Tool for Active Directory pentesting"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ldap3"
]

[project.scripts]
BadSuccessor = "BadSuccessor.BadSuccessor:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"BadSuccessor" = ["Rubeus.exe"]