[project]
name = "BadSuccessor"
version = "1.0.0"
description = "dMSA abuse for privilege elevation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["ldap3"]

[project.scripts]
BadSuccessor = "BadSuccessor:main"

[tool.setuptools]
py-modules = ["BadSuccessor"]
include-package-data = true

[tool.setuptools.package-data]
BadSuccessor = ["Rubeus.exe"]